--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -218,7 +218,7 @@ h6 { font-size: 1rem; margin-bottom: 0.5rem; font-weight: 500; }
         display: block;
         width: 25px;
         height: 3px;
-        background-color: #6366f1;
+        background-color: #005d99;
         margin: 5px 0;
         transition: 0.3s;
         border-radius: 2px;
