--- a/templates/calendar/attendance_report.html
+++ b/templates/calendar/attendance_report.html
@@ -1146,13 +1146,13 @@
 
 <style>
 .btn-purple {
-    background-color: #6f42c1;
-    border-color: #6f42c1;
+    background-color: #005d99;
+    border-color: #005d99;
     color: white;
 }
 .btn-purple:hover {
-    background-color: #5a32a3;
-    border-color: #5a32a3;
+    background-color: #004d80;
+    border-color: #004d80;
     color: white;
 }
 </style>
